--- a/grundprojekt.tex
+++ b/grundprojekt.tex
@@ -7,7 +7,7 @@
 \usepackage{graphicx}
 \usepackage[ngerman]{babel}
 \author{Lennart Karsten}
-\title{Portierung einer JavaScript Fullstack Anwendung, zu einem Microservice Frontend\\
+\title{Portierung einer JavaScript Fullstack Anwendung, in ein Microservice Frontend\\
 	\vspace{3mm}\large Master Grundprojekt
 }
 \date{}
@@ -42,10 +42,13 @@
 	\subsubsection{Seitenlayout}
 	\subsubsection{Benutzerführung / Fehlerbehandlung}
 	\subsection{Portierung alter Komponenten}
-	\subsection{Data Mapping}
+	\subsubsection{Import}
+	\subsubsection{Data View}
+	\subsubsection{Mapping}
 	\subsection{Optimierungen}
 	\subsubsection{Longpolling bei Imports}
 	\subsubsection{persistierung von Sessiondaten}
+	\subsubsection{? HTTP 1.1 to HTTP 2 ?}
 	
 	
 	\section{Schluss}
