--- a/grundprojekt_v2.tex
+++ b/grundprojekt_v2.tex
@@ -26,7 +26,7 @@
 \usepackage{makeidx}
 \usepackage{listings}
 \usepackage{natbib}
-\usepackage[ngerman,colorlinks=true]{hyperref}
+\usepackage[english,colorlinks=true]{hyperref}
 \usepackage{soul}
 \usepackage{hawstyle}
 \usepackage{float}
@@ -154,11 +154,11 @@
 	\typeout{===== File: chapter 1}
 
 
-	\input{chapters/chapter1}
-	\input{chapters/chapter2}
-	\input{chapters/chapter3}
-	\input{chapters/chapter4}
-	\input{chapters/chapter5}
-	\input{chapters/chapter6}
+	\input{chapters/chapter1} % Introduction
+	\input{chapters/chapter2} % Groundwork
+	\input{chapters/chapter3} % Analysis
+	\input{chapters/chapter4} % Software Design
+	\input{chapters/chapter5} % Implementation
+	\input{chapters/chapter6} % End
 	
 \end{document}
