--- a/grundprojekt_v2.tex
+++ b/grundprojekt_v2.tex
@@ -35,6 +35,8 @@
 \usepackage{csquotes}
 \usepackage{tabu}
 \usepackage{subcaption}
+\usepackage{usecases}
+\usepackage{enumitem}
 
 %define JavaScript listing
 \lstdefinelanguage{JavaScript}{
