--- a/grundprojekt_v2.tex
+++ b/grundprojekt_v2.tex
@@ -117,8 +117,8 @@
 	%%%%%
 	%% customize (see readme.pdf for supported values)
 	\HAWThesisProperties{Author={Lennart Karsten}
-		,Title={Transition of a full-stack application to a microservice frontend}
-		,EnglishTitle={Technological evaluation of the MARS Websuite, in a Microservice architecture}
+		,Title={Transition of a fullstack application to a microservice frontend}
+		,EnglishTitle={Transition of a fullstack application to a microservice frontend}
 		,ThesisType={Project 1}
 		,ExaminationType={Masterprüfung}
 		,DegreeProgramme={Bachelor of Science Angewandte Informatik}
@@ -138,8 +138,8 @@
 	%% note: this is one command on multiple lines
 	\HAWAbstractPage
 	%% English abstract
-	{Websuite, Microservices, Architektur}%
-	{This work shows the current state of working with geodata in the MARS working group. Based on that, methods of improvement will be suggested and evaluated.}
+	{Microservices, Archikektur, Frontend, AngularJS}%
+	{Diese Arbeit zeigt die Portierung einer fullstack Anwendung in ein AngularJS basiertes Frontend in einer Microservices Umgebung.}
 	
 	\newpage
 	\singlespacing
