--- a/grundprojekt_v2.tex
+++ b/grundprojekt_v2.tex
@@ -1,6 +1,6 @@
 % !TeX spellcheck = en_US
 
-\documentclass[draft=true
+\documentclass[
 ,paper=a4
 ,twoside=false
 ,fontsize=11pt
@@ -216,5 +216,34 @@
 	\input{chapters/chapter4} % Software Design
 	\input{chapters/chapter5} % Implementation
 	\input{chapters/chapter6} % End
+	
+	
+	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+	%% appendix if used
+	%%\appendix
+	%%\typeout{===== File: appendix}
+	%%\include{appendix}
+	
+	% bibliography and other stuff
+	\backmatter
+	
+	\typeout{===== Section: literature}
+	%% read the documentation for customizing the style
+	\bibliographystyle{dinat}
+	\bibliography{grundprojekt_v2}
+	
+	\typeout{===== Section: nomenclature}
+	%% uncomment if a TOC entry is needed
+	%%\addcontentsline{toc}{chapter}{Glossar}
+	\renewcommand{\nomname}{Glossar}
+	\clearpage
+	\markboth{\nomname}{\nomname} %% see nomencl doc, page 9, section 4.1
+	\printnomenclature
+	
+	%% index
+	\typeout{===== Section: index}
+	\printindex
+	
+	%\HAWasurency
 	
 \end{document}
