--- a/grundprojekt_v2.tex
+++ b/grundprojekt_v2.tex
@@ -1,3 +1,4 @@
+% !TeX root = grundprojekt_v2.tex
 % !TeX spellcheck = en_US
 
 \documentclass[
@@ -33,7 +34,7 @@
 \usepackage{hawstyle}
 \usepackage{float}
 \usepackage{csquotes}
-\usepackage{tabu}
+\usepackage{tabularx}
 \usepackage{subcaption}
 \usepackage{usecases}
 \usepackage{enumitem}
