Software design chapter progress

--- a/grundprojekt_v2.bib
+++ b/grundprojekt_v2.bib
@@ -40,3 +40,9 @@
 	year={2003},
 	publisher={Prentice Hall PTR}
 }
+
+@article{barth2011web,
+	title={The web origin concept},
+	author={Barth, Adam},
+	year={2011}
+}
