should be done.

--- a/grundprojekt_v2.tex
+++ b/grundprojekt_v2.tex
@@ -166,8 +166,9 @@
 	%%%%%
 	%% customize (see readme.pdf for supported values)
 	\HAWThesisProperties{Author={Lennart Karsten}
-		,Title={Transition of a fullstack application to a microservice frontend}
-		,EnglishTitle={Transition of a fullstack application to a microservice frontend}
+		,Title={Transition of a full-stack application\\
+			to a micro-service front-end}
+		,EnglishTitle={Transition of a full-stack application to a micro-service front-end}
 		,ThesisType={Project 1}
 		,ExaminationType={Masterprüfung}
 		,DegreeProgramme={Bachelor of Science Angewandte Informatik}
@@ -188,7 +189,7 @@
 	\HAWAbstractPage
 	%% English abstract
 	{Microservices, Archikektur, Frontend, AngularJS}%
-	{Diese Arbeit zeigt die Portierung einer fullstack Anwendung in ein AngularJS basiertes Frontend in einer Microservices Umgebung.}
+	{Diese Arbeit zeigt die Portierung einer full-stack Anwendung in ein AngularJS basiertes Frontend in einer Microservices Umgebung.}
 	
 	\newpage
 	\singlespacing
