--- a/grundprojekt_v2.bib
+++ b/grundprojekt_v2.bib
@@ -46,3 +46,9 @@
 	author={Barth, Adam},
 	year={2011}
 }
+
+@article{fowler2004inversion,
+	title={Inversion of control containers and the dependency injection pattern},
+	author={Fowler, Martin},
+	year={2004}
+}
