Annotations from Christian

--- a/grundprojekt_v2.bib
+++ b/grundprojekt_v2.bib
@@ -52,3 +52,10 @@
 	author={Fowler, Martin},
 	year={2004}
 }
+
+@article{newman2015bff,
+	title={Pattern: Backends For Frontends},
+	author={Newman, Sam},
+	year={2015},
+	biburl={http://samnewman.io/patterns/architectural/bff/}
+}
