--- a/grundprojekt_v2.tex
+++ b/grundprojekt_v2.tex
@@ -166,16 +166,15 @@
 	%%%%%
 	%% customize (see readme.pdf for supported values)
 	\HAWThesisProperties{Author={Lennart Karsten}
-		,Title={Transition of a full-stack application\\
-			to a micro-service front-end}
-		,EnglishTitle={Transition of a full-stack application to a micro-service front-end}
+		,Title={Redesign of an AngularJS front-end}
+		,EnglishTitle={Redesign of an AngularJS front-end}
 		,ThesisType={Project 1}
 		,ExaminationType={Masterprüfung}
 		,DegreeProgramme={Bachelor of Science Angewandte Informatik}
 		,ThesisExperts={Prof. Dr. Clemen}
 		,ReleaseDate={\today}
 	}
-	
+
 	%% title
 	\frontmatter
 	
@@ -188,7 +187,7 @@
 	%% note: this is one command on multiple lines
 	\HAWAbstractPage
 	%% English abstract
-	{Microservices, Archikektur, Frontend, AngularJS}%
+	{Microservices, Architektur, Frontend, AngularJS}%
 	{Diese Arbeit zeigt die Portierung einer full-stack Anwendung in ein AngularJS basiertes Frontend in einer Microservices Umgebung.}
 	
 	\newpage
