typos and stuff.

--- a/grundprojekt_v2.tex
+++ b/grundprojekt_v2.tex
@@ -168,9 +168,9 @@
 	\HAWThesisProperties{Author={Lennart Karsten}
 		,Title={Redesign of an AngularJS front-end}
 		,EnglishTitle={Redesign of an AngularJS front-end}
-		,ThesisType={Project 1}
+		,ThesisType={Grundprojekt}
 		,ExaminationType={Masterprüfung}
-		,DegreeProgramme={Bachelor of Science Angewandte Informatik}
+		,DegreeProgramme={Master Informatik}
 		,ThesisExperts={Prof. Dr. Clemen}
 		,ReleaseDate={\today}
 	}
@@ -186,9 +186,12 @@
 	%% add abstract pages
 	%% note: this is one command on multiple lines
 	\HAWAbstractPage
-	%% English abstract
+	%% German abstract
 	{Microservices, Architektur, Frontend, AngularJS}%
-	{Diese Arbeit zeigt die Portierung einer full-stack Anwendung in ein AngularJS basiertes Frontend in einer Microservices Umgebung.}
+	{Diese Arbeit behandelt das Redesign einer AngularJS Anwendung in einer Microservices Umgebung.}
+	%% English abstract
+	{Microservices, architecture, front-end, AngularJS}%
+	{This work covers the redesign of an AngularJS application inside a micro-service environment.}
 	
 	\newpage
 	\singlespacing
